// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/chairs DELETE /:chairId should delete an chair then undelete it 1`] = `
Object {
  "entities": Object {
    "chairs": Object {
      "23d4e661-1155-4494-8fdb-c4ec0ddf804d": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "description": null,
        "id": "23d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "isActive": true,
        "isDeleted": false,
        "name": "C1",
        "pmsId": "12",
      },
    },
  },
  "result": "23d4e661-1155-4494-8fdb-c4ec0ddf804d",
}
`;

exports[`/api/chairs GET /api/chairs should fetch 2 chairs 1`] = `
Object {
  "entities": Object {
    "chairs": Object {
      "23d4e661-1155-4494-8fdb-c4ec0ddf804d": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "description": null,
        "id": "23d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "isActive": true,
        "name": "C1",
        "pmsId": "12",
      },
      "46d4e661-1155-4494-8fdb-c4ec0ddf804d": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "description": null,
        "id": "46d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "isActive": true,
        "name": "C2",
        "pmsId": null,
      },
    },
  },
  "result": Array [
    "46d4e661-1155-4494-8fdb-c4ec0ddf804d",
    "23d4e661-1155-4494-8fdb-c4ec0ddf804d",
  ],
}
`;

exports[`/api/chairs GET /api/chairs should fetch 2 chairs and be formatted in the jsonapi standard 1`] = `
Object {
  "data": Array [
    Object {
      "attributes": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "description": null,
        "isActive": true,
        "name": "C2",
        "pmsId": null,
      },
      "id": "46d4e661-1155-4494-8fdb-c4ec0ddf804d",
      "type": "chair",
    },
    Object {
      "attributes": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "description": null,
        "isActive": true,
        "name": "C1",
        "pmsId": "12",
      },
      "id": "23d4e661-1155-4494-8fdb-c4ec0ddf804d",
      "type": "chair",
    },
  ],
}
`;

exports[`/api/chairs GET /api/chairs/:chairId should fetch the correct chair1 1`] = `
Object {
  "entities": Object {
    "chairs": Object {
      "23d4e661-1155-4494-8fdb-c4ec0ddf804d": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "description": null,
        "id": "23d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "isActive": true,
        "name": "C1",
        "pmsId": "12",
      },
    },
  },
  "result": "23d4e661-1155-4494-8fdb-c4ec0ddf804d",
}
`;

exports[`/api/chairs GET /api/chairs/:chairId should fetch the correct chair2 1`] = `
Object {
  "entities": Object {
    "chairs": Object {
      "46d4e661-1155-4494-8fdb-c4ec0ddf804d": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "description": null,
        "id": "46d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "isActive": true,
        "name": "C2",
        "pmsId": null,
      },
    },
  },
  "result": "46d4e661-1155-4494-8fdb-c4ec0ddf804d",
}
`;

exports[`/api/chairs POST /api/chairs should create a chair and respond with json api 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
      "description": null,
      "isActive": true,
      "name": "New Chair",
      "pmsId": null,
    },
    "id": "11d4e661-1155-4494-8fdb-c4ec0ddf804d",
    "type": "chair",
  },
}
`;

exports[`/api/chairs POST /api/chairs should create an chair 1`] = `
Object {
  "entities": Object {
    "chairs": Object {
      "11d4e661-1155-4494-8fdb-c4ec0ddf804d": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "description": null,
        "id": "11d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "isActive": true,
        "name": "New Chair",
        "pmsId": null,
      },
    },
  },
  "result": "11d4e661-1155-4494-8fdb-c4ec0ddf804d",
}
`;

exports[`/api/chairs PUT /api/chairs/:chairId should update a chair 1`] = `
Object {
  "entities": Object {
    "chairs": Object {
      "23d4e661-1155-4494-8fdb-c4ec0ddf804d": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "description": null,
        "id": "23d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "isActive": true,
        "name": "Modified Chair Name",
        "pmsId": "12",
      },
    },
  },
  "result": "23d4e661-1155-4494-8fdb-c4ec0ddf804d",
}
`;

exports[`/api/chairs PUT /api/chairs/:chairId should update a chair even with extra attrs 1`] = `
Object {
  "entities": Object {
    "chairs": Object {
      "23d4e661-1155-4494-8fdb-c4ec0ddf804d": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "description": null,
        "id": "23d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "isActive": true,
        "name": "Modified Chair Name",
        "pmsId": "12",
      },
    },
  },
  "result": "23d4e661-1155-4494-8fdb-c4ec0ddf804d",
}
`;
